fix table and color text truncate

--- a/apps/block_scout_web/assets/css/my-customs/_blocks.scss
+++ b/apps/block_scout_web/assets/css/my-customs/_blocks.scss
@@ -5,7 +5,6 @@
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
-      line-height: normal;
       letter-spacing: 0.2px;
     }
   }
@@ -15,7 +14,6 @@
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
-      line-height: normal;
       letter-spacing: 0.2px;
     }
   }
@@ -25,7 +23,6 @@
     text-align: center;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
     letter-spacing: 0.2px;
   }
   .td-hash {
@@ -35,7 +32,6 @@
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
-      line-height: normal;
       letter-spacing: 0.2px;
       margin: auto;
     }
@@ -48,7 +44,6 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
     letter-spacing: 0.2px;
   }
 }
